build/errors/error6.txt
adam@dig:~/openhip-openhip-7ca0bd5421a5$ make
make  all-recursive
make[1]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Making all in src
make[2]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
make[3]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2   -DHITGEN  -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hitgen-hip_util.o -MD -MP -MF .deps/hitgen-hip_util.Tpo -c -o hitgen-hip_util.o `test -f 'util/hip_util.c' || echo './'`util/hip_util.c
mv -f .deps/hitgen-hip_util.Tpo .deps/hitgen-hip_util.Po
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2   -DHITGEN  -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hitgen-hip_globals.o -MD -MP -MF .deps/hitgen-hip_globals.Tpo -c -o hitgen-hip_globals.o `test -f 'protocol/hip_globals.c' || echo './'`protocol/hip_globals.c
mv -f .deps/hitgen-hip_globals.Tpo .deps/hitgen-hip_globals.Po
gcc -DHITGEN  -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\""   -o hitgen hitgen-hitgen.o hitgen-hip_util.o hitgen-hip_globals.o -lxml2 -lz -ldl -lpthread -lcrypto -lcrypto  -lm
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2    -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hip-hip_linux_umh.o -MD -MP -MF .deps/hip-hip_linux_umh.Tpo -c -o hip-hip_linux_umh.o `test -f 'linux/hip_linux_umh.c' || echo './'`linux/hip_linux_umh.c
In file included from linux/hip_linux_umh.c:65:0:
./include/hip/hip_sadb.h:128:3: error: unknown type name ‘des_key_schedule’
   des_key_schedule ks[3];               /* 3-DES keys */
   ^~~~~~~~~~~~~~~~
Makefile:781: recipe for target 'hip-hip_linux_umh.o' failed
make[3]: *** [hip-hip_linux_umh.o] Error 1
make[3]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:1151: recipe for target 'all-recursive' failed
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:422: recipe for target 'all-recursive' failed
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Makefile:357: recipe for target 'all' failed
make: *** [all] Error 2
